fixed a spacing issue

--- a/starwars/styles/globals.css
+++ b/starwars/styles/globals.css
@@ -18,11 +18,11 @@ a {
 
 .navbar {
     position: fixed;
-    right: -760px;
-    width: 275px;
-    height: 35px;
-    border: 1px solid rgb(35, 42, 116);
-    border-radius: 5px;
+    right: -685px;
+    width: 295px;
+    height: 45px;
+    border: 1px solid rgb(255, 255, 255);
+    border-radius: 15px;
     background:rgb(147, 205, 255);
     margin-bottom: 20px;
     margin-top: 5px;
